Adding rmse logic

--- a/notebooks/rec/rmse.ipynb
+++ b/notebooks/rec/rmse.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt\n",
+    "\n",
+    "# Imports\n",
+    "import os\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import numpy as np\n",
     "import skfuzzy as fuzz\n",
     "from skfuzzy import control as ctrl\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -875,20 +884,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_user_vec(driving_log, web_map):\n",
-    "    # Import library and generate user vectors from model\n",
-    "#     fuel_score = web_map.get('fuel_economy', 1)\n",
+    "def generate_user_vec(driving_log, web_map, m):\n",
+    "    df = m.format_df([driving_log])\n",
+    "\n",
+    "    num_of_brakes_average, num_of_brakes_stepped = m.count_braking_steps(run_df)\n",
+    "\n",
+    "    average_acc = run_df[run_df['acc'] > 0]['acc'].mean()\n",
+    "    average_rpm = run_df['rpm'].mean()\n",
+    "    average_vel = run_df['speed'].mean()\n",
+    "    average_throttle = run_df['throttle'].mean()\n",
+    "    average_lateral = run_df['lateral_velocity'].apply(abs).mean()\n",
+    "\n",
+    "\n",
+    "    run_df['deacc'] = -1 * run_df['acc'] \n",
+    "    run_df = run_df.query('deacc > 1')\n",
+    "\n",
+    "    average_deacc = run_df['deacc'].mean()\n",
+    "\n",
+    "    brake_score = m.compute_brake(average_deacc, num_of_brakes_stepped)\n",
+    "    hp_score = m.compute_hp(average_acc, average_rpm)\n",
+    "    torque_score = m.compute_torque(average_vel, average_throttle)\n",
+    "    lateral_score = m.calculate_score(average_lateral, m.average_lateral_overall, m.max_lateral)\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    fuel_economy = 1.0\n",
     "    fuel_pref = web_map.get('fuel_economy', 1)\n",
     "    if fuel_pref == 2:\n",
     "        fuel_economy = 3\n",
     "    elif fuel_pref == 3:\n",
     "        fuel_economy = 5.0\n",
-    "    return [3.0,3.2,3.2,3.3, fuel_economy]\n",
+    "    return [hp_score, torque_score, brake_score, lateral_score, fuel_economy]\n",
     "\n",
     "def norm_fuel(row, web_map):\n",
     "#     return 1.0\n",
@@ -921,8 +951,8 @@
     "        cond3 = False\n",
     "    return cond1 & cond2 & cond3\n",
     "\n",
-    "def find_car(models_file, driving_log, web_inputs):\n",
-    "    user_vector = generate_user_vec(None, web_inputs)\n",
+    "def find_car(models_file, driving_log, web_inputs, fuzzy_model):\n",
+    "    user_vector = generate_user_vec(driving_log, web_inputs, fuzzy_model)\n",
     "    df = pd.read_csv(models_file).dropna()\n",
     "    # Apply filtering\n",
     "    df = df[df.apply(lambda x: filter_cars(x, web_inputs), axis=1)]\n",
@@ -937,168 +967,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Body</th>\n",
-       "      <th>Brand</th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Torque</th>\n",
-       "      <th>Braking</th>\n",
-       "      <th>RoadHolding</th>\n",
-       "      <th>FuelEconomy</th>\n",
-       "      <th>FuelEconomyNorm</th>\n",
-       "      <th>rmse_score</th>\n",
-       "      <th>percent_match</th>\n",
-       "      <th>percent_match_norm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Sedan</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Camry</td>\n",
-       "      <td>35845.0</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>3.844759</td>\n",
-       "      <td>3.601549</td>\n",
-       "      <td>3.175182</td>\n",
-       "      <td>3.284314</td>\n",
-       "      <td>2.811417</td>\n",
-       "      <td>2.811417</td>\n",
-       "      <td>0.426916</td>\n",
-       "      <td>91.461687</td>\n",
-       "      <td>95.730843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Sedan</td>\n",
-       "      <td>Mazda</td>\n",
-       "      <td>3</td>\n",
-       "      <td>15900.0</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2.200536</td>\n",
-       "      <td>2.143188</td>\n",
-       "      <td>3.479319</td>\n",
-       "      <td>2.794118</td>\n",
-       "      <td>3.103228</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.646518</td>\n",
-       "      <td>87.069632</td>\n",
-       "      <td>91.338788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Sedan</td>\n",
-       "      <td>Lexus</td>\n",
-       "      <td>IS 300</td>\n",
-       "      <td>41050.0</td>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>3.917876</td>\n",
-       "      <td>3.816695</td>\n",
-       "      <td>2.435227</td>\n",
-       "      <td>2.549020</td>\n",
-       "      <td>2.519606</td>\n",
-       "      <td>2.519606</td>\n",
-       "      <td>0.721448</td>\n",
-       "      <td>85.571041</td>\n",
-       "      <td>89.840197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Sedan</td>\n",
-       "      <td>Mercedes</td>\n",
-       "      <td>C300</td>\n",
-       "      <td>44700.0</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2.967361</td>\n",
-       "      <td>3.730637</td>\n",
-       "      <td>4.543796</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>2.738464</td>\n",
-       "      <td>2.738464</td>\n",
-       "      <td>1.004672</td>\n",
-       "      <td>79.906562</td>\n",
-       "      <td>84.175718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Sedan</td>\n",
-       "      <td>Honda</td>\n",
-       "      <td>Civic</td>\n",
-       "      <td>19990.0</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2.152698</td>\n",
-       "      <td>2.050510</td>\n",
-       "      <td>4.239659</td>\n",
-       "      <td>4.754902</td>\n",
-       "      <td>3.322086</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.023414</td>\n",
-       "      <td>79.531723</td>\n",
-       "      <td>83.800879</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Unnamed: 0   Body     Brand   Model    Price    Year        HP    Torque  \\\n",
-       "15          15  Sedan    Toyota   Camry  35845.0  2018.0  3.844759  3.601549   \n",
-       "14          14  Sedan     Mazda       3  15900.0  2018.0  2.200536  2.143188   \n",
-       "3            3  Sedan     Lexus  IS 300  41050.0  2017.0  3.917876  3.816695   \n",
-       "5            5  Sedan  Mercedes    C300  44700.0  2018.0  2.967361  3.730637   \n",
-       "13          13  Sedan     Honda   Civic  19990.0  2018.0  2.152698  2.050510   \n",
-       "\n",
-       "     Braking  RoadHolding  FuelEconomy  FuelEconomyNorm  rmse_score  \\\n",
-       "15  3.175182     3.284314     2.811417         2.811417    0.426916   \n",
-       "14  3.479319     2.794118     3.103228         3.000000    0.646518   \n",
-       "3   2.435227     2.549020     2.519606         2.519606    0.721448   \n",
-       "5   4.543796     5.000000     2.738464         2.738464    1.004672   \n",
-       "13  4.239659     4.754902     3.322086         3.000000    1.023414   \n",
-       "\n",
-       "    percent_match  percent_match_norm  \n",
-       "15      91.461687           95.730843  \n",
-       "14      87.069632           91.338788  \n",
-       "3       85.571041           89.840197  \n",
-       "5       79.906562           84.175718  \n",
-       "13      79.531723           83.800879  "
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "Can't get attribute 'flModel' on <module '__main__'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-214-c0949cba3ba9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'models/fuzzy_models.p'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mfuzzy_models\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mfind_car\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hwd_data2/run_34.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweb_mapping\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfuzzy_models\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: Can't get attribute 'flModel' on <module '__main__'>"
+     ]
     }
    ],
    "source": [
@@ -1107,7 +988,11 @@
     "    'price_max': 45000,\n",
     "    'fuel_economy': 2, # 1,2,3\n",
     "}\n",
-    "find_car(DATA_FILE, None, web_mapping)"
+    "\n",
+    "with open('models/fuzzy_models.p', 'rb') as handle:\n",
+    "    fuzzy_models = pickle.load(handle)\n",
+    "    \n",
+    "find_car(DATA_FILE, 'hwd_data2/run_34.csv', web_mapping, fuzzy_models)"
    ]
   },
   {
