rmse and model integration

--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "    df['Braking'] = pd.to_numeric(df['Braking'].apply(lambda x: str(x)[:3].strip()), errors='coerce').astype(float).dropna()\n",
     "    df['Road Holding'] = pd.to_numeric(df['Road Holding'].apply(lambda x: str(x)[:4].strip()), errors='coerce').astype(float).dropna()\n",
     "    df['Fuel Economy'] = pd.to_numeric(df['FE-MPG-CMB'].apply(lambda x: str(x).split(\"/\")[0].replace(\"NA\",\"0\")), errors='coerce').astype(float).dropna()\n",
-    "\n",
+    "    df = df.iloc[2:]\n",
     "    return df.dropna(thresh=3)\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
