Add HP,torque,l100k values

--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,12 @@
     "    'Price': data['Price'],\n",
     "    'Model': data['Model'],\n",
     "    'image': data['image'],\n",
-    "    'details': data['details']\n",
+    "    'details': data['details'],\n",
+    "    'HP_value': data['HP'],\n",
+    "    'Torque_value':data['Torque'],\n",
+    "    'FE-L100K-CMB':data['FE-L100K-CMB'],\n",
+    "    'FE-L100K-CTY':data['FE-L100K-CTY'],\n",
+    "    'FE-L100K-HWY':data['FE-L100K-HWY'],\n",
     "}\n",
     "\n",
     "hp_score_list = []\n",
