--- a/notebooks/rec/rmse.ipynb
+++ b/notebooks/rec/rmse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "32  4.502712     2.063551     5.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -989,7 +989,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,34 +1026,64 @@
     "    torque_score = m.compute_torque(average_vel, average_throttle)\n",
     "    lateral_score = m.calculate_score(average_lateral, m.average_lateral_overall, m.max_lateral)\n",
     "    \n",
+    "    performance = web_map.get('performance', 1)\n",
+    "    if performance == 2:\n",
+    "        torque_score = torque_score * 1.2\n",
+    "        hp_score = hp_score * 1.2\n",
+    "    elif performance == 3:\n",
+    "        torque_score = torque_score * 1.5\n",
+    "        hp_score = hp_score * 1.5\n",
+    "        \n",
+    "    performance = web_map.get('handling', 1)\n",
+    "    if performance == 2:\n",
+    "        torque_score = torque_score * 1.1\n",
+    "        lateral_score = lateral_score * 1.2\n",
+    "    elif performance == 3:\n",
+    "        torque_score = torque_score * 1.2\n",
+    "        lateral_score = lateral_score * 1.5\n",
+    "\n",
+    "    torque_score = min(5, torque_score)\n",
+    "    hp_score = min(5, hp_score)\n",
+    "    lateral_score = min(5, lateral_score)\n",
     "    \n",
+    "    cost = 0\n",
+    "    cost_pref = web_map.get('cost', 1)\n",
+    "    if cost_pref == 2:\n",
+    "        cost = 5.0\n",
+    "    elif cost_pref == 3:\n",
+    "        cost = 10.0\n",
     "    \n",
     "    fuel_economy = 1.0\n",
     "    fuel_pref = web_map.get('fuel_economy', 1)\n",
     "    if fuel_pref == 2:\n",
-    "        fuel_economy = 3\n",
-    "    elif fuel_pref == 3:\n",
     "        fuel_economy = 5.0\n",
-    "    return [hp_score, torque_score, brake_score, lateral_score, fuel_economy]\n",
+    "    elif fuel_pref == 3:\n",
+    "        fuel_economy = 10.0\n",
+    "    return [hp_score, torque_score, brake_score, lateral_score, fuel_economy, cost]\n",
     "\n",
     "def norm_fuel(row, web_map):\n",
     "#     return 1.0\n",
     "    fuel_economy = 1.0\n",
     "    fuel_pref = web_map.get('fuel_economy', 1)\n",
     "    if fuel_pref == 2:\n",
-    "        if row.FuelEconomy >= 3:\n",
-    "            fuel_economy = 3\n",
-    "        else:\n",
-    "            fuel_economy = row.FuelEconomy\n",
-    "    elif fuel_pref == 3:\n",
     "        fuel_economy = row.FuelEconomy\n",
+    "    elif fuel_pref == 3:\n",
+    "        fuel_economy = row.FuelEconomy * 2.0\n",
     "    return fuel_economy\n",
     "\n",
-    "# if fuel economy > 2.5 = 2.5\n",
-    "\n",
+    "def norm_cost(row, web_map):\n",
+    "#     return 1.0\n",
+    "    cost = 1.0\n",
+    "    c = 6.25 * (75000 - row.Price)/ 75000\n",
+    "    cost_pref = web_map.get('cost', 1)\n",
+    "    if cost_pref == 2:\n",
+    "        cost = c\n",
+    "    elif cost_pref == 3:\n",
+    "        cost = c * 2\n",
+    "    return cost\n",
     "\n",
     "def calc_rmse(row, user_vec):\n",
-    "    car_vector = [row.HP, row.Torque, row.Braking, row.RoadHolding, row.FuelEconomyNorm]\n",
+    "    car_vector = [row.HP, row.Torque, row.Braking, row.RoadHolding, row.FuelEconomyNorm, row.PriceNorm]\n",
     "    return sqrt(mean_squared_error(user_vec, car_vector))\n",
     "\n",
     "def filter_cars(row, web_map=dict()):\n",
@@ -1068,6 +1098,7 @@
     "    cond4 = False\n",
     "    if row['Body'] in set(web_map.get('body_types', ['Sedan'])):\n",
     "        cond4 = True\n",
+    "    \n",
     "    return cond1 & cond2 & cond3 & cond4\n",
     "\n",
     "def find_car(models_file, driving_log, web_inputs, fuzzy_model):\n",
@@ -1077,6 +1108,7 @@
     "    df = df[df.apply(lambda x: filter_cars(x, web_inputs), axis=1)]\n",
     "#     df[df.apply(lambda x: x['b'] > x['c'], axis=1)]\n",
     "    df['FuelEconomyNorm'] = df.apply(lambda x: norm_fuel(x, web_inputs), axis=1)\n",
+    "    df['PriceNorm'] = df.apply(lambda x: norm_cost(x, web_inputs), axis=1)\n",
     "    df['rmse_score'] = df.apply(lambda x: calc_rmse(x,user_vector), axis=1)\n",
     "    df['percent_match'] = df.apply(lambda x: (5 - x.rmse_score) * 20, axis=1)\n",
     "    rmse_norm_factor = df.rmse_score.min() / 2\n",
@@ -1086,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1148,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-1fc398e07b34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfind_car\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-62-1fc398e07b34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfind_car\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: find_car() missing 1 required positional argument: 'fuzzy_model'"
      ]
     }
@@ -1127,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,6 +1170,7 @@
     "        'price_max': price,\n",
     "        'fuel_economy': 1, # 1,2,3\n",
     "        'body_types': car_body,\n",
+    "        'performance': 1\n",
     "    }\n",
     "\n",
     "    with open('models/fuzzy_models.p', 'rb') as handle:\n",
@@ -1151,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1186,13 +1219,13 @@
        "      <th>Price</th>\n",
        "      <th>Torque_value</th>\n",
        "      <th>...</th>\n",
-       "      <th>image</th>\n",
        "      <th>HP</th>\n",
        "      <th>Torque</th>\n",
        "      <th>Braking</th>\n",
        "      <th>RoadHolding</th>\n",
        "      <th>FuelEconomy</th>\n",
        "      <th>FuelEconomyNorm</th>\n",
+       "      <th>PriceNorm</th>\n",
        "      <th>rmse_score</th>\n",
        "      <th>percent_match</th>\n",
        "      <th>percent_match_norm</th>\n",
@@ -1212,16 +1245,16 @@
        "      <td>15900</td>\n",
        "      <td>185.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>https://ca.mazdacdn.com/common/cars/2018/m3s/3...</td>\n",
        "      <td>2.191425</td>\n",
        "      <td>2.153287</td>\n",
        "      <td>2.428375</td>\n",
        "      <td>2.783375</td>\n",
        "      <td>2.583658</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.295087</td>\n",
-       "      <td>74.098253</td>\n",
-       "      <td>87.049126</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.250750</td>\n",
+       "      <td>74.984996</td>\n",
+       "      <td>87.492498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1236,16 +1269,16 @@
        "      <td>15495</td>\n",
        "      <td>132.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>http://www.kia.ca/content/2018-forte/gallery/g...</td>\n",
        "      <td>1.750758</td>\n",
        "      <td>1.536400</td>\n",
        "      <td>4.154611</td>\n",
        "      <td>2.422430</td>\n",
        "      <td>2.713359</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.398257</td>\n",
-       "      <td>72.034866</td>\n",
-       "      <td>84.985740</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.340125</td>\n",
+       "      <td>73.197502</td>\n",
+       "      <td>85.705004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -1260,16 +1293,16 @@
        "      <td>19995</td>\n",
        "      <td>145.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>http://st.motortrend.ca/uploads/sites/10/2017/...</td>\n",
        "      <td>1.810307</td>\n",
        "      <td>1.687712</td>\n",
        "      <td>2.356952</td>\n",
        "      <td>2.452336</td>\n",
        "      <td>2.264020</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.481423</td>\n",
-       "      <td>70.371534</td>\n",
-       "      <td>83.322408</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.412626</td>\n",
+       "      <td>71.747478</td>\n",
+       "      <td>84.254980</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -1284,16 +1317,16 @@
        "      <td>15999</td>\n",
        "      <td>156.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>https://www.hyundaicanada.com/-/media/hyundai/...</td>\n",
        "      <td>1.524469</td>\n",
        "      <td>1.815745</td>\n",
        "      <td>2.316080</td>\n",
        "      <td>2.392523</td>\n",
        "      <td>2.972763</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.501615</td>\n",
-       "      <td>69.967707</td>\n",
-       "      <td>82.918580</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.430282</td>\n",
+       "      <td>71.394368</td>\n",
+       "      <td>83.901870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1308,16 +1341,16 @@
        "      <td>19990</td>\n",
        "      <td>177.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>https://www.honda.ca/Content/honda.ca/2d46e2eb...</td>\n",
        "      <td>2.143785</td>\n",
        "      <td>2.060172</td>\n",
        "      <td>2.513562</td>\n",
        "      <td>4.395466</td>\n",
        "      <td>2.778210</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.725827</td>\n",
-       "      <td>65.483464</td>\n",
-       "      <td>78.434337</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.627492</td>\n",
+       "      <td>67.450150</td>\n",
+       "      <td>79.957652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -1332,20 +1365,20 @@
        "      <td>16700</td>\n",
        "      <td>73.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>https://static.cargurus.com/images/site/2014/0...</td>\n",
        "      <td>0.476397</td>\n",
        "      <td>0.849676</td>\n",
        "      <td>4.502712</td>\n",
        "      <td>2.063551</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.956943</td>\n",
-       "      <td>60.861134</td>\n",
-       "      <td>73.812008</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.832491</td>\n",
+       "      <td>63.350184</td>\n",
+       "      <td>75.857686</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 22 columns</p>\n",
+       "<p>6 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1357,42 +1390,34 @@
        "13          21  Coupe         Honda          8.56          9.42          7.24   \n",
        "32          45  Coupe  Smart Fortwo          4.20          4.60          3.80   \n",
        "\n",
-       "    HP_value     Model  Price  Torque_value         ...          \\\n",
-       "14     184.0         3  15900         185.0         ...           \n",
-       "16     147.0    Forte   15495         132.0         ...           \n",
-       "23     152.0   Impreza  19995         145.0         ...           \n",
-       "17     128.0  Elantra   15999         156.0         ...           \n",
-       "13     180.0     Civic  19990         177.0         ...           \n",
-       "32      40.0      Pure  16700          73.0         ...           \n",
+       "    HP_value     Model  Price  Torque_value         ...                HP  \\\n",
+       "14     184.0         3  15900         185.0         ...          2.191425   \n",
+       "16     147.0    Forte   15495         132.0         ...          1.750758   \n",
+       "23     152.0   Impreza  19995         145.0         ...          1.810307   \n",
+       "17     128.0  Elantra   15999         156.0         ...          1.524469   \n",
+       "13     180.0     Civic  19990         177.0         ...          2.143785   \n",
+       "32      40.0      Pure  16700          73.0         ...          0.476397   \n",
        "\n",
-       "                                                image        HP    Torque  \\\n",
-       "14  https://ca.mazdacdn.com/common/cars/2018/m3s/3...  2.191425  2.153287   \n",
-       "16  http://www.kia.ca/content/2018-forte/gallery/g...  1.750758  1.536400   \n",
-       "23  http://st.motortrend.ca/uploads/sites/10/2017/...  1.810307  1.687712   \n",
-       "17  https://www.hyundaicanada.com/-/media/hyundai/...  1.524469  1.815745   \n",
-       "13  https://www.honda.ca/Content/honda.ca/2d46e2eb...  2.143785  2.060172   \n",
-       "32  https://static.cargurus.com/images/site/2014/0...  0.476397  0.849676   \n",
+       "      Torque   Braking  RoadHolding  FuelEconomy  FuelEconomyNorm  PriceNorm  \\\n",
+       "14  2.153287  2.428375     2.783375     2.583658              1.0        1.0   \n",
+       "16  1.536400  4.154611     2.422430     2.713359              1.0        1.0   \n",
+       "23  1.687712  2.356952     2.452336     2.264020              1.0        1.0   \n",
+       "17  1.815745  2.316080     2.392523     2.972763              1.0        1.0   \n",
+       "13  2.060172  2.513562     4.395466     2.778210              1.0        1.0   \n",
+       "32  0.849676  4.502712     2.063551     5.000000              1.0        1.0   \n",
        "\n",
-       "     Braking  RoadHolding  FuelEconomy  FuelEconomyNorm  rmse_score  \\\n",
-       "14  2.428375     2.783375     2.583658              1.0    1.295087   \n",
-       "16  4.154611     2.422430     2.713359              1.0    1.398257   \n",
-       "23  2.356952     2.452336     2.264020              1.0    1.481423   \n",
-       "17  2.316080     2.392523     2.972763              1.0    1.501615   \n",
-       "13  2.513562     4.395466     2.778210              1.0    1.725827   \n",
-       "32  4.502712     2.063551     5.000000              1.0    1.956943   \n",
+       "    rmse_score  percent_match  percent_match_norm  \n",
+       "14    1.250750      74.984996           87.492498  \n",
+       "16    1.340125      73.197502           85.705004  \n",
+       "23    1.412626      71.747478           84.254980  \n",
+       "17    1.430282      71.394368           83.901870  \n",
+       "13    1.627492      67.450150           79.957652  \n",
+       "32    1.832491      63.350184           75.857686  \n",
        "\n",
-       "    percent_match  percent_match_norm  \n",
-       "14      74.098253           87.049126  \n",
-       "16      72.034866           84.985740  \n",
-       "23      70.371534           83.322408  \n",
-       "17      69.967707           82.918580  \n",
-       "13      65.483464           78.434337  \n",
-       "32      60.861134           73.812008  \n",
-       "\n",
-       "[6 rows x 22 columns]"
+       "[6 rows x 23 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
